tests/whiley/valid/test_787.wyal
assert "assertion failed":
    forall(int[] arr2$1, int[] arr2, int[] arr1):
        if:
            arr1 == [1, 2, 3]
            arr2 == arr1
            arr2$1 == arr2[2:=2]
            arr2$1[2] != |arr1|
        then:
            arr1 == [1, 2, 3]


